   command for a protocol equivalent of sending a `SIGTERM`, e.g. when
   a newer instance of the driver program tries to start. [#1903, #2392]

 - A new `NUT_QUIET_INIT_BANNER` envvar (presence or "true" value) can now
   prevent the tool name and NUT version banner from being unilaterally
   printed out when NUT programs start. [issues #1789 vs. #316; #2573]

 - The `upsdrvctl` should now warn if executed on systems where NUT was
   built with support for service management frameworks like systemd or SMF,
   so nut-driver service units prepared by `nut-driver-enumerator` would
   conflict with manually-executed driver programs. This warning can be
   hushed by exporting a `NUT_QUIET_INIT_NDE_WARNING` environment variable
   with any value.

 - Extended `upsdrvctl` with a `list` operation (or `-l` option) to report
   manageable device configuration names (possible `<ups>` arguments to
   `start`, `stop` etc. operations), or to confirm a single name that it
   is known, and a `status` operation for more information. [#2567]

 - riello_ser updates:
   * added `localcalculation` option to compute `battery.runtime` and
     `battery.charge` if the device provides bogus values [issue #2390,
     following in the footsteps of #1692, #1685 done for `riello_usb`]
     (similar to `runtimecal` in some other drivers, may be refactored
     to that configuration and logic model in later NUT releases)

 - apcsmart updates:
   * Revised code to use `strncpy()` and avoid potential overflows that are
     possible with `strcpy()` used before. [PR #2564]
   * Lost communications led to a logging flood, should not anymore.
     In fact, the driver should try fully reconnecting upon getting into
     a prolonged data stale condition. [issue #704, PR #2564]

 - nutdrv_qx updates:
   * added Visench C1K (using serial port converter with USB ID `1a86:7523`)
     as known supported by `nutdrv_qx` (Megatec protocol) since at least
     NUT v2.7.4 release. [#2395]